more url fixes